# castle-game

./: Cargo.toml
assets/shaders/: bake_heightmap.wgsl  debug_material.wgsl  erode_heightmap.wgsl  fsr1.wgsl  raymarching.wgsl  upscale.wgsl
src/: bake.rs  buildings.rs  bvh.rs  camera.rs  debug.rs  fsr.rs  main.rs  npc.rs  raymarching.rs  widgets.rs
